# sthlm-temperature-changes

./: README.md  pyproject.toml
.ipynb_checkpoints/: avg_temperatures-checkpoint.ipynb
1_Data/: sthlm_weather_1900-2020.xlsx
2_Script/: avg_temperatures.ipynb
