[tool.poetry]
name = "sthlm-temperature-changes"
version = "0.1.0"
description = ""
authors = ["Abtin Salahshor <abtin.salahshor@bonniernews.se>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
numpy = "^1.20.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
